Fix spacing for page footer

--- a/src/shared/Footer.css
+++ b/src/shared/Footer.css
@@ -1,4 +1,5 @@
 .footer {
+    margin-top: 2rem;
     text-align: start;
     width: fit-content;
 }
